@@ -100,6 +100,20 @@ string VString::quoteAny(const string& str, char tgt, char esc) {
     return result;
 }
 
+string VString::dequotePercent(const string& str) {
+    string result;
+    char last = '\0';
+    for (const char c : str) {
+        if (last == '%' && c == '%') {
+            last = '\0';
+        } else {
+            result += c;
+            last = c;
+        }
+    }
+    return result;
+}
+
 string VString::quoteStringLiteralForShell(const string& str) {
     string result;
     const char dquote = '"';
