@@ -6,13 +6,27 @@
 
 module t (/*AUTOARG*/);
 
+   localparam TEN = 10;
+   localparam string PCTPCT = "%%";
+
    if (0) begin
-      $info("User compile-time info");
-      $warning("User compile-time warning");
-      $error("User compile-time error");
+      $info;
+      $info("User elaboration-time info");
+      $info("Percent=%% PctPct=%s Ten=%0d", PCTPCT, TEN);
+      $warning;
+      $warning("User elaboration-time warning");
+      $warning(1);  // Check can convert arguments to format
+      $error("User elaboration-time error");
    end
 
    initial begin
+      $info;
+      $info("User run-time info");
+      $info("Percent=%% PctPct=%s Ten=%0d", PCTPCT, TEN);
+      $warning;
+      $warning("User run-time warning");
+      $warning(1);  // Check can convert arguments to format
+
       $write("*-* All Finished *-*\n");
       $finish;
    end
