@@ -6,9 +6,13 @@
 
 module t (/*AUTOARG*/);
 
+   localparam TEN = 10;
+   localparam string PCTPCT = "%%";
+
    if (1) begin
       $info;
       $info("User elaboration-time info");
+      $info("Percent=%% PctPct=%s Ten=%0d", PCTPCT, TEN);
       $warning;
       $warning("User elaboration-time warning");
       $warning(1);  // Check can convert arguments to format
